# NeverMind

./: .gitignore  CMakeLists.txt  icon.rc
resources/data/: editor.tiled-project  editor.tiled-session
resources/data/animation/: BTL_FACE.json  BTL_PAINFUL_TRUTH.json  DEBUG_SPIN.json  GEN_FLIP.json  OW_AUBREY_SPIN.json  OW_IDLE.json  OW_RUN.json  OW_RUN_IDLE.json  OW_SPIN.json  OW_WALK.json
resources/data/maps/: DEBUG.tmx  alcoholspace.tmx  apartment.tmx  bedspace.tmx  lol.json  test-full.tmj  test-full.tmx  test-map.tmx  whitespace.tmx
resources/data/rpg/: emotion.json
resources/data/rpg/stats/: lily.json
resources/data/tileset/: DW_TreeStump_anim.tsx  DW_VastForest.tsx  FA_InteriorTileset.tsx  FA_InteriorTileset2.tsx  collision.tsx  flags.tsx  terrain.tsx  whitespace.tsx
resources/img/sprites/characters/: LILY.pdn
src/: Game.cpp  Game.hpp  GameData.hpp  Main.cpp  SFMLOrthogonalLayer.hpp
src/Battle/: BattlePlayer.cpp  BattlePlayer.hpp  Emotion.cpp  Emotion.hpp  EventChain.cpp  EventChain.hpp
src/Engine/: Animation.cpp  Animation.hpp  AnimationPlayer.cpp  AnimationPlayer.hpp  AssetManager.cpp  AssetManager.hpp  Exceptions.hpp  ExternalLoader.hpp  FPSCounter.cpp  FPSCounter.hpp  InputManager.cpp  InputManager.hpp  Object.cpp  Object.hpp  StateMachine.cpp  StateMachine.hpp  Vec2i.hpp
src/Engine/Objects/: Animated.cpp  Animated.hpp  Graphic.cpp  Graphic.hpp  Object.hpp
src/Engine/States/: BaseState.cpp  BaseState.hpp
src/General/: CharacterInfo.cpp  CharacterInfo.hpp  CharacterStats.cpp  CharacterStats.hpp  Skill.cpp  Skill.hpp
src/Graphics/: AbstractRender.hpp  AnimationData.cpp  AnimationData.hpp  AnimationRender.cpp  AnimationRender.hpp  SpriteRender.cpp  SpriteRender.hpp
src/Graphics/Battle/: BattleBox.cpp  BattleBox.hpp  BattleRender.cpp  BattleRender.hpp  EnemyRender.cpp  EnemyRender.hpp
src/Graphics/Overworld/: ImageLayer.cpp  ImageLayer.hpp  Layer.hpp  MapLayer.cpp  MapLayer.hpp
src/Objects/: Actor.cpp  Actor.hpp  Animated.cpp  Animated.hpp  Entity.cpp  Entity.hpp  Graphic.cpp  Graphic.hpp  Object.hpp
src/Overworld/: Direction.cpp  Direction.hpp  IBlocking.hpp
src/RPG/Interface/: IBlocking.hpp
src/RPG/Objects/: Actor.cpp  Actor.hpp  Entity.cpp  Entity.hpp
src/RPG/States/: BattleState.cpp  BattleState.hpp  MainMenuState.cpp  MainMenuState.hpp  OverworldState.cpp  OverworldState.hpp
src/RPG/Utils/: Constant.hpp  Direction.hpp
src/States/: BaseState.cpp  BaseState.hpp  BattleState.cpp  BattleState.hpp  MainMenuState.cpp  MainMenuState.hpp  OverworldState.cpp  OverworldState.hpp  State.hpp
